--- a/client/app/directives/conditionSettings/conditionSettings.html
+++ b/client/app/directives/conditionSettings/conditionSettings.html
@@ -2,7 +2,7 @@
   <div class="row field-condition-flag">
     <input type="checkbox" class="checkbox-small" name="addClarification" type="checkbox" id="addClarification" ng-model="field.has_condition">
     &nbsp;
-    <label for="addClarification" class="smallText"> Show this question on condition</label>
+    <label for="addClarification" class="smallText"> Enter a condition to display this question</label>
   </div>
   <div class="row field-condition-questions" ng-if='field.has_condition'>
     <div class="col-lg-7 col-sm-7">
