--- a/client/app/directives/fieldElement/fieldElement.html
+++ b/client/app/directives/fieldElement/fieldElement.html
@@ -46,7 +46,7 @@
 
           <div class="clearfix"></div>
           <div class="choice-help-text" ng-if="choice.has_helptext">
-            <textarea name="" id=""  placeholder="Tell some thing about this option" class="vert form-control" ng-model="choice.help_text"></textarea>
+            <textarea name="" id=""  placeholder="Information entered here will display in a popup when a user selects this answer" class="vert form-control" ng-model="choice.help_text"></textarea>
             <br>
             <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
           </div>
@@ -85,7 +85,7 @@
 
           <div class="clearfix"></div>
           <div class="choice-help-text" ng-if="choice.has_helptext">
-            <textarea name="" id=""  placeholder="Tell some thing about this option" class="vert form-control" ng-model="choice.help_text"></textarea>
+            <textarea name="" id=""  placeholder="Information entered here will display in a popup when a user selects this answer" class="vert form-control" ng-model="choice.help_text"></textarea>
             <br>
             <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
           </div>
@@ -125,7 +125,7 @@
 
           <div class="clearfix"></div>
           <div class="choice-help-text" ng-if="choice.has_helptext">
-            <textarea name="" id=""  placeholder="Tell some thing about this option" class="vert form-control" ng-model="choice.help_text"></textarea>
+            <textarea name="" id=""  placeholder="Information entered here will display in a popup when a user selects this answer" class="vert form-control" ng-model="choice.help_text"></textarea>
             <br>
             <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
           </div>
