--- a/client/app/controllers/certificate/certificate.html
+++ b/client/app/controllers/certificate/certificate.html
@@ -2,7 +2,10 @@
   <div ng-include="'components/sidebar/sidebar.html'"></div>
   <div class="col-lg-10 col-sm-10 main-content-wrap">
     <div class="main-content" ng-if="certificates.length == 0">
-      <br><br><br><br>
+      <br>
+      <br>
+      <br>
+      <br>
       <div class="text-center">
         <img src="assets/images/certificate-empty.svg" alt="" class="img-responsive" style="margin: 10px auto; max-width: 900px;">
         <button type="submit" class="btn btn-primary btn-sm" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em> &nbsp; Add new certificate</button>
@@ -15,57 +18,44 @@
         </div>
       </div>
       <br>
-      <div class="row-fluid">
-        <div class="col-lg-10 col-sm-10 oh">
-          <div class="row-fluid">
-            <div class="col-lg-7 col-sm-7">
-              <div class="iconed-input">
-                <input type="text" class="form-control" ng-model="query.name" placeholder="Search for certificates">
-                <em class="icon icon-search"></em>
-              </div>
-            </div>
-            <div class="col-lg-2">
-            </div>
-            <div class="col-lg-3">
-              <form class="form" ng-if="isAdmin()" >
-                <button type="submit" class="btn btn-primary btn-sm" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em> &nbsp; Add new certificate</button>
-              </form>
+      <div class="certificates-list">
+        <div class="row-fluid">
+          <div class="col-lg-7 col-sm-7">
+            <div class="iconed-input">
+              <input type="text" class="form-control" ng-model="query.name" placeholder="Search for certificates">
+              <em class="icon icon-search"></em>
             </div>
           </div>
-          <div class="clearfix"></div>
-          <hr>
-          <br>
-          <div>
-            <table class="table table-striped table-hover">
-              <thead>
-                <tr>
-                  <th>
-                    #
-                  </th>
-                  <th> Certification Name </th>
-                  <th> Status </th>
-                  <th>Min</th>
-                  <th>Max</th>
-                  <th> Created on </th>
-                  <th ng-if="isAdmin()"> Actions </th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr ng-repeat="certificate in certificates">
-                  <td> {{$index + 1}}</td>
-                  <td>{{certificate.name}}</td>
-                  <td>{{ certificate.status }}</td>
-                  <td>{{ certificate.min || 0 }}</td>
-                  <td>{{ certificate.max || 0 }}</td>
-                  <td> {{getFormatedDate(certificate.updated)}}</td>
-                  <td>
-                    <button class="btn btn-info btn-xs" ng-click="editCertificate(certificate)"><em class="icon icon-pencil"></em></button>
-                    &nbsp;&nbsp;&nbsp;
-                    <button class="btn btn-danger btn-xs" ng-click="removeCertificate(certificate)"><em class="icon icon-remove"></em></button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+          <div class="col-lg-2">
+          </div>
+          <div class="col-lg-3">
+            <form class="form" ng-if="isAdmin()">
+              <button type="submit" class="btn btn-primary btn-sm" ng-click="openNewCertificate()"> <em class="icon icon-plus"></em> &nbsp; Add new certificate</button>
+            </form>
+          </div>
+        </div>
+        <div class="clearfix"></div>
+        <br>
+        <br>
+        <div class="row-fluid tabled-row-heading" >
+          <div class="col-lg-3 col-md-3 col-sm-3"><strong> Certificate Name</strong> </div>
+          <div class="col-lg-2 col-md-2 col-sm-2"><strong>  Status  </strong></div>
+          <div class="col-lg-1 col-md-1 col-sm-1"><strong> Min </strong></div>
+          <div class="col-lg-1 col-md-1 col-sm-1"><strong> Max </strong></div>
+          <div class="col-lg-3 col-md-3 col-sm-3"><strong>  Created on  </strong></div>
+          <div class="col-lg-2 col-md-2 col-sm-2" ng-if="isAdmin()"><strong>  Actions  </strong></div>
+        </div>
+        <div class="clearfix"></div>
+        <div class="row-fluid tabled-row" ng-repeat="certificate in certificates" ng-click="editCertificate(certificate)">
+          <div class="col-lg-3 col-md-3 col-sm-3"> <a href="">{{certificate.name}}</a></div>
+          <div class="col-lg-2 col-md-2 col-sm-2"> {{ certificate.status }}</div>
+          <div class="col-lg-1 col-md-1 col-sm-1"> {{ certificate.min || 0 }}</div>
+          <div class="col-lg-1 col-md-1 col-sm-1"> {{ certificate.max || 0 }}</div>
+          <div class="col-lg-3 col-md-3 col-sm-3"> {{getFormatedDate(certificate.updated)}}</div>
+          <div class="col-lg-2 col-md-2 col-sm-2">
+            <button class="btn btn-info btn-xs" ng-click="editCertificate(certificate)"><em class="icon icon-pencil"></em></button>
+            &nbsp;&nbsp;&nbsp;
+            <button class="btn btn-danger btn-xs" ng-click="removeCertificate(certificate)"><em class="icon icon-remove"></em></button>
           </div>
         </div>
       </div>
