--- a/client/app/controllers/certificate/certificate.html
+++ b/client/app/controllers/certificate/certificate.html
@@ -46,8 +46,8 @@
           <div class="col-lg-2 col-md-2 col-sm-2" ng-if="isAdmin()"><strong>  Actions  </strong></div>
         </div>
         <div class="clearfix"></div>
-        <div class="row-fluid tabled-row" ng-repeat="certificate in certificates" ng-click="editCertificate(certificate)">
-          <div class="col-lg-3 col-md-3 col-sm-3"> <a href="">{{certificate.name}}</a></div>
+        <div class="row-fluid tabled-row" ng-repeat="certificate in certificates" >
+          <div class="col-lg-3 col-md-3 col-sm-3"> <a href="" ng-click="editCertificate(certificate)">{{certificate.name}}</a></div>
           <div class="col-lg-2 col-md-2 col-sm-2"> {{ certificate.status }}</div>
           <div class="col-lg-1 col-md-1 col-sm-1"> {{ certificate.min || 0 }}</div>
           <div class="col-lg-1 col-md-1 col-sm-1"> {{ certificate.max || 0 }}</div>
