--- a/client/app/controllers/create/formsettings.html
+++ b/client/app/controllers/create/formsettings.html
@@ -22,10 +22,7 @@
       <div class="panel-heading">
         <h3 class="panel-title">Certification logic</h3>
       </div>
-
       <div class="panel-body">
-
-
         <table class="table table-striped table-hover">
           <thead>
             <tr>
@@ -42,34 +39,29 @@
             </tr>
           </tbody>
         </table>
-
         <button class="btn btn-info" ng-click="attachCertificate()"> + Add/Modify certificate</button>
-
         <br>
         <br>
         <div class="form-group">
           <label for="">Expires in</label>
           <div class="row">
-              <div class="col-lg-3 col-sm-6">
-                <input type="number" class="form-control" ng-model="form.expires_in.number">
-              </div>
-              <div class="col-lg-3 col-sm-4">
-                <select name="" id="" class="form-control" ng-model="form.expires_in.unit">
-                  <option value="years">Years</option>
-                  <option value="months">Months</option>
-                  <option value="days">Days</option>
-                  <option value="hours">Hours</option>
-                  <option value="minutes">Minutes</option>
-                  <option value="seconds">Seconds</option>
-                </select>
-              </div>
+            <div class="col-lg-3 col-sm-6">
+              <input type="number" class="form-control" ng-model="form.expires_in.number">
             </div>
+            <div class="col-lg-3 col-sm-4">
+              <select name="" id="" class="form-control" ng-model="form.expires_in.unit">
+                <option value="years">Years</option>
+                <option value="months">Months</option>
+                <option value="days">Days</option>
+                <option value="hours">Hours</option>
+                <option value="minutes">Minutes</option>
+                <option value="seconds">Seconds</option>
+              </select>
+            </div>
+          </div>
         </div>
-
         <label for="">When no certificate is awarded?</label>
-
         <ng-quill-editor ng-model="form.no_certificate" toolbar="true" link-tooltip="true" image-tooltip="true" toolbar-entries="bold list bullet italic underline strike link image" editor-required="true" required="" error-class="input-error"></ng-quill-editor>
-
         <div class="pull-right">
           <br>
           <last-save button-enabled="enableFormSaveButton" updated="from.updated"></last-save>
@@ -77,8 +69,6 @@
         </div>
       </div>
     </div>
-
-
     <div class="panel panel-success">
       <div class="panel-heading">
         <h3 class="panel-title">Publishing</h3>
@@ -108,7 +98,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-sm-3">
-          <button class="btn btn-danger btn-sm" tooltip-append-to-body="true" tooltip="Remove this form! Can't be reverted!"><em class="icon icon-remove"></em> Remove this form</button>
+          <button class="btn btn-danger btn-sm" tooltip-append-to-body="true" tooltip="Remove this form! Can't be reverted!" ng-click="removeForm()"><em class="icon icon-remove"></em> Remove this form</button>
         </div>
       </div>
     </div>
