--- a/client/index.html
+++ b/client/index.html
@@ -102,6 +102,7 @@
           <script src="app/directives/nuggets/nuggets.js"></script>
           <script src="app/directives/prevElement/prevElement.js"></script>
           <script src="app/directives/typeBadge/typeBadge.js"></script>
+          <script src="app/filters/common/common.js"></script>
           <script src="app/services/certificateData/certificateData.js"></script>
           <script src="app/services/formData/formData.js"></script>
           <script src="app/services/sectionData/sectionData.js"></script>
