--- a/client/app/directives/fieldElement/fieldElement.html
+++ b/client/app/directives/fieldElement/fieldElement.html
@@ -28,26 +28,29 @@
       <div class="col-lg-1">
       </div>
       <div class="col-lg-10">
-        <div class="multipleOptions" ng-repeat="choice in field.choices | orderBy:'seq'" ng-class="{choicena: choice.is_na}">
-          <span class="optionIndex">{{$index + 1}}. </span>
-          <input type="text" values="option1" focus-on-show class="form-control" ng-model="choice.label" ng-focus="choice.focus">
-          <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
-          <div class="multipleOptionsActions">
+        <div class="optionsSort" ui-sortable="optionsSortableOptions" ng-model="field.choices">
+          <div class="multipleOptions" ng-repeat="choice in field.choices | orderBy: 'seq'" data-field="{{field._id}}" ng-class="{choicena: choice.is_na}">
+            <span class="draghandle v-draghandle"></span>
+            <span class="optionIndex">{{$index + 1}}. </span>
+            <input type="text" values="option1" focus-on-show class="form-control" ng-model="choice.label" ng-focus="choice.focus">
+            <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
+            <div class="multipleOptionsActions">
 
-            <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
+              <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
 
-            <a ng-if="field.choices.length > 1" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
+              <a ng-if="field.choices.length > 1" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
 
-            <span ng-if='choice.is_na'>
-              <strong for="" class="badge badge-info"> NA </strong>
-            </span>
-          </div>
+              <span ng-if='choice.is_na'>
+                <strong for="" class="badge badge-info"> NA </strong>
+              </span>
+            </div>
 
-          <div class="clearfix"></div>
-          <div class="choice-help-text" ng-if="choice.has_helptext">
-            <textarea name="" id=""  placeholder="Information entered here will display in a popup when a user selects this answer" class="vert form-control" ng-model="choice.help_text"></textarea>
-            <br>
-            <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
+            <div class="clearfix"></div>
+            <div class="choice-help-text" ng-if="choice.has_helptext">
+              <textarea name="" id=""  placeholder="Information entered here will display in a popup when a user selects this answer" class="vert form-control" ng-model="choice.help_text"></textarea>
+              <br>
+              <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
+            </div>
           </div>
         </div>
 
@@ -67,26 +70,29 @@
       <div class="col-lg-1">
       </div>
       <div class="col-lg-10">
-        <div class="multipleOptions" ng-repeat="choice in field.choices | orderBy:'seq'" ng-class="{choicena: choice.is_na}">
-          <input name="optionsRadio" type="radio" id="option1" class="fakeRadioCheckbox"  tabindex="-1">
-          <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
-          <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
-          <div class="multipleOptionsActions">
+        <div class="optionsSort" ui-sortable="optionsSortableOptions" ng-model="field.choices">
+          <div class="multipleOptions" ng-repeat="choice in field.choices | orderBy:'seq'" ng-class="{choicena: choice.is_na}" data-field="{{field._id}}">
+            <span class="draghandle v-draghandle"></span>
+            <input name="optionsRadio" type="radio" id="option1" class="fakeRadioCheckbox"  tabindex="-1">
+            <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
+            <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
+            <div class="multipleOptionsActions">
 
-            <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
+              <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
 
-            <a ng-if="field.choices.length > 1" class="btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove"></em> </a>
+              <a ng-if="field.choices.length > 1" class="btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove"></em> </a>
 
-            <span ng-if='choice.is_na'>
-              <strong for="" class="badge badge-info"> NA </strong>
-            </span>
-          </div>
+              <span ng-if='choice.is_na'>
+                <strong for="" class="badge badge-info"> NA </strong>
+              </span>
+            </div>
 
-          <div class="clearfix"></div>
-          <div class="choice-help-text" ng-if="choice.has_helptext">
-            <textarea name="" id=""  placeholder="Information entered here will display in a popup when a user selects this answer" class="vert form-control" ng-model="choice.help_text"></textarea>
-            <br>
-            <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
+            <div class="clearfix"></div>
+            <div class="choice-help-text" ng-if="choice.has_helptext">
+              <textarea name="" id=""  placeholder="Information entered here will display in a popup when a user selects this answer" class="vert form-control" ng-model="choice.help_text"></textarea>
+              <br>
+              <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
+            </div>
           </div>
         </div>
         <div class="addNewChoice">
@@ -104,29 +110,32 @@
       <div class="col-lg-1">
       </div>
       <div class="col-lg-10">
-        <div class="multipleOptions" ng-repeat="choice in field.choices | orderBy:'seq'" ng-class="{choicena: choice.is_na}">
-          <input name="optionsCheckboxes" type="checkBox" id="option1" class="fakeRadioCheckbox" tabindex="-1" >
-          <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
-          <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
-          <div class="multipleOptionsActions">
-           <!--  <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a> -->
+        <div class="optionsSort" ui-sortable="optionsSortableOptions" ng-model="field.choices">
+          <div class="multipleOptions" ng-repeat="choice in field.choices | orderBy:'seq'" ng-class="{choicena: choice.is_na}" data-field="{{field._id}}">
+            <span class="draghandle v-draghandle"></span>
+            <input name="optionsCheckboxes" type="checkBox" id="option1" class="fakeRadioCheckbox" tabindex="-1" >
+            <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
+            <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
+            <div class="multipleOptionsActions">
+             <!--  <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a> -->
 
-            <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
+              <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
 
-            <span ng-if="field.choices.length > 1">
-            <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
-            </span>
+              <span ng-if="field.choices.length > 1">
+              <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
+              </span>
 
-            <span ng-if='choice.is_na'>
-              <strong for="" class="badge badge-info"> NA </strong>
-            </span>
-          </div>
+              <span ng-if='choice.is_na'>
+                <strong for="" class="badge badge-info"> NA </strong>
+              </span>
+            </div>
 
-          <div class="clearfix"></div>
-          <div class="choice-help-text" ng-if="choice.has_helptext">
-            <textarea name="" id=""  placeholder="Information entered here will display in a popup when a user selects this answer" class="vert form-control" ng-model="choice.help_text"></textarea>
-            <br>
-            <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
+            <div class="clearfix"></div>
+            <div class="choice-help-text" ng-if="choice.has_helptext">
+              <textarea name="" id=""  placeholder="Information entered here will display in a popup when a user selects this answer" class="vert form-control" ng-model="choice.help_text"></textarea>
+              <br>
+              <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
+            </div>
           </div>
         </div>
 
