--- a/client/app/controllers/admin/admin.html
+++ b/client/app/controllers/admin/admin.html
@@ -8,19 +8,48 @@
         </div>
       </div>
       <br>
-      <div class="row-flulid">
-        <div class="col-lg-10 col-sm-10 oh">
-          <p>The delete user and user index api routes are restricted to users with the 'admin' role.</p>
-          <ul class="list-group">
-            <li class="list-group-item" ng-repeat="user in users">
-              <strong>{{user.name}}</strong>
-              <br>
-              <span class="text-muted">{{user.email}}</span>
-              <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
-            </li>
-          </ul>
+      <div class="row-fluid">
+        <div class="col-lg-7 col-sm-7 oh">
+          <div class="iconed-input">
+            <input type="text" class="form-control" ng-model="query.name" placeholder="Search for users">
+            <em class="icon icon-search"></em>
+          </div>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+      <div class="froms-list">
+        <div ng-if="users.length > 0">
+          <div class="tabled-row-filter">
+            <span class="label label-info" ng-class="{selected: !querys.role}" ng-click="querys.role = undefined">All</span>
+            <span class="label label-info" ng-class="{selected: querys.role == 'user'}" ng-click="querys.role = 'user'">User</span>
+            <span class="label label-info" ng-class="{selected: querys.role == 'admin'}" ng-click="querys.role = 'admin'">Admin</span>
+          </div>
+          <div class="row-fluid tabled-row-heading">
+            <div class="col-lg-2 col-sm-2"><strong>Name</strong></div>
+            <div class="col-lg-3 col-sm-3"><strong>Email</strong></div>
+            <div class="col-lg-2 col-sm-2"><strong>Role</strong></div>
+            <div class="col-lg-2 col-sm-2"><strong>is Admin</strong></div>
+          </div>
+          <div class="clearfix"></div>
+          <div class="row-fluid tabled-row" ng-repeat="user in users | filter: query| filter:querys.role:true">
+            <div class="col-lg-2 col-sm-2">
+              {{user.name}}
+            </div>
+            <div class="col-lg-3 col-sm-3">
+              {{user.email}}
+            </div>
+            <div class="col-lg-2 col-sm-2">{{user.role}}</div>
+            <div class="col-lg-2 col-sm-2">
+              <div ng-if="isMe._id !== user._id">
+                <input class='tgl tgl-ios' id='{{user._id}}' type='checkbox' ng-model="user.isAdmin" ng-change="toggleAdminRole(user)">
+                <label class='tgl-btn' for='{{user._id}}'></label>
+              </div>
+              <span class="label label-info" ng-if='isMe._id == user._id'>this is you</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
